@@ -1,4 +1,6 @@
 DIST fixesproto-4.0.tar.bz2 38550 RMD160 fc1c2130ae89a88365cb039a5e9ffb8c6651c16e SHA1 de9139e4836f1ab234583406ea2ee6446ad7965f SHA256 b3fe971ccc8152db6c78da7117c31fc4cd2fcb2b6a4df3db0f8fed13d4ceb08f
+DIST fixesproto-4.1.tar.bz2 55786 RMD160 ae0d8617c837924d13a2746a14bb662d05ff6f93 SHA1 8b2e6009c629649556d45ef847d5b31591bb6f96 SHA256 9635e292887e67caf59a16ee991ac348c978b279faa5acc323d30c3dcede398d
 EBUILD fixesproto-4.0.ebuild 543 RMD160 acdd86aafac6cbc0a7f10ee3bc1179fb5ce8c9e9 SHA1 a6f61dbdead47b548ad972b4567ebf91b3396acb SHA256 d82e9e275bacd1a8add597545797645e5938b2655b10a50b3b5c227428622944
-MISC ChangeLog 2746 RMD160 f321bc15e91a83e0b405176acdc1b587062ee008 SHA1 d6cf8d8059f319cafc74cbddcf6a0d8ea6da94d2 SHA256 9bfe8c16a2a651a0b3e6ac65566c51cffd2fa3a02a8bbef5147f2c232fff5360
+EBUILD fixesproto-4.1.ebuild 571 RMD160 b87817ea76f7c069efb3e2114d6cf2025d9f5ef3 SHA1 32482b800098518c105be3b06679f4c40d7e9fe4 SHA256 e797a2f310d44830cdfd72c551dd4afb303bfb7aaf47d7d9fb296def596637c1
+MISC ChangeLog 2993 RMD160 15e60841884a86a5e1e867551391c8a2b377275f SHA1 c80b4c9e47bd04725394b54fd83c0703b974b797 SHA256 f8d9e9a26af93df3ba9cc81c70c1235ebd19cdef631c2123fdff907c6de1dd17
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
